--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
-spring.datasource.password=Golden22@123
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
